--- a/pom.xml
+++ b/pom.xml
@@ -46,14 +46,26 @@
 	<build>
 		<plugins>
 			<plugin>
+			
+			
+			
+			
+			
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>3.0.0-M5</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-					<includes>
-						<include>**/*CukesRunner.java</include>
-					</includes>
+				 
+          <includes>
+            <include>AP_HomePageSearch_StepDefinition</include>
+    
+          </includes>
+          
+          
+          
+          
+          
+          
 				</configuration>
 			</plugin>
 			<plugin>
@@ -75,6 +87,8 @@
 							<!-- it has to match the one on the cukesrunner -->
 							<cucumberoutput>${project.build.directory}/target/cucumber.json</cucumberoutput>
 							<enableflashcharts></enableflashcharts>
+							
+							
 						</configuration>
 					</execution>
 				</executions>
