--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,13 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 				 
+       
+       
           <includes>
             <include>AP_HomePageSearch_StepDefinition</include>
-    
+    		
+    		<include>AP_Login_StepDefinition</include>
+    		<include>AP_verifyDressesPageFeatures</include>
           </includes>
           
           
